[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Insect-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Insect.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 5, 5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 5, 0, 5, 5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 10, 0, 5, 5 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 5, 5 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Flying",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[node name="Insect" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -2.54986 ]
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.507813, -0.5 )
frames = SubResource( 6 )
animation = "Flying"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DirectionChange" type="Timer" parent="."]
autostart = true

[node name="FlyTime" type="Timer" parent="."]
autostart = true

[node name="WaitTime" type="Timer" parent="."]

[connection signal="timeout" from="DirectionChange" to="." method="_on_DirectionChange_timeout"]
[connection signal="timeout" from="FlyTime" to="." method="_on_FlyTime_timeout"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
